ArgoCD/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
  labels:
    app: argocd-server
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
      nodePort: 30100
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8080
      nodePort: 30443
  selector:
    app: argocd-server
